refactor(http-admin): governance rules
